crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__binop_newline_arrow_ends_expression.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "a\n-> b"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 2,
        },
    },
    value: Var(
        "a",
    ),
}
